# streamlit2stlite

./: .gitignore  README.md  converter_app.html  converter_app.py  example_app.html  pyproject.toml
streamlit2stlite/: __init__.py  cli.py  core.py
tests/: test_core.py
